// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportDialog renders with CodePen export form 1`] = `
<DocumentFragment>
  <mock-codepenexportform
    description="description"
    htmlexportdata="fake html"
    htmlfilename="THE REPORT FILE NAME"
    jsonexportdata="fake json"
    jsonfilename="JSON file name"
  />
</DocumentFragment>
`;

exports[`ExportDialog renders with export dropdown 1`] = `
<DocumentFragment>
  <mock-styledwithresponsivemode
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <mock-styledtextfieldbase
      arialabel="Provide result description"
      multiline="true"
      resizable="false"
      rows="8"
      value="description"
    />
    <mock-styleddialogfooterbase>
      <mock-exportdropdown
        featureflagstoredata="[object Object]"
        htmlfilename="THE REPORT FILE NAME"
        htmlfileurl="html file url"
        jsonfilename="JSON file name"
        jsonfileurl="json file url"
        reportexportservices="[object Object],[object Object]"
      />
    </mock-styleddialogfooterbase>
  </mock-styledwithresponsivemode>
</DocumentFragment>
`;

exports[`ExportDialog renders with open false 1`] = `
<DocumentFragment>
  <mock-styledwithresponsivemode
    dialogcontentprops="[object Object]"
    hidden="true"
    modalprops="[object Object]"
  >
    <mock-styledtextfieldbase
      arialabel="Provide result description"
      multiline="true"
      resizable="false"
      rows="8"
      value="description"
    />
    <mock-styleddialogfooterbase>
      <mock-customizedprimarybutton
        data-automation-id="single-export-to-html-button"
        download="THE REPORT FILE NAME"
        href="html file url"
      >
        Export
      </mock-customizedprimarybutton>
    </mock-styleddialogfooterbase>
  </mock-styledwithresponsivemode>
</DocumentFragment>
`;

exports[`ExportDialog renders with open false: StyledWithResponsiveMode props 1`] = `
{
  "children": [
    <ForwardRef(StyledTextFieldBase)
      ariaLabel="Provide result description"
      autoFocus={true}
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={8}
      value="description"
    />,
    <ForwardRef(StyledDialogFooterBase)>
      <CustomizedPrimaryButton
        data-automation-id="single-export-to-html-button"
        download="THE REPORT FILE NAME"
        href="html file url"
        onClick={[Function]}
      >
        Export
      </CustomizedPrimaryButton>
    </ForwardRef(StyledDialogFooterBase)>,
  ],
  "dialogContentProps": {
    "subText": "Optional: please describe the result (it will be saved in the report).",
    "title": "Provide result description",
    "type": 0,
  },
  "hidden": true,
  "modalProps": {
    "containerClassName": "exportDialog",
    "isBlocking": false,
    "onDismissed": [Function],
  },
  "onDismiss": [Function],
}
`;

exports[`ExportDialog renders with open true 1`] = `
<DocumentFragment>
  <mock-styledwithresponsivemode
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <mock-styledtextfieldbase
      arialabel="Provide result description"
      multiline="true"
      resizable="false"
      rows="8"
      value="description"
    />
    <mock-styleddialogfooterbase>
      <mock-customizedprimarybutton
        data-automation-id="single-export-to-html-button"
        download="THE REPORT FILE NAME"
        href="html file url"
      >
        Export
      </mock-customizedprimarybutton>
    </mock-styleddialogfooterbase>
  </mock-styledwithresponsivemode>
</DocumentFragment>
`;

exports[`ExportDialog renders with open true: StyledWithResponsiveMode props 1`] = `
{
  "children": [
    <ForwardRef(StyledTextFieldBase)
      ariaLabel="Provide result description"
      autoFocus={true}
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={8}
      value="description"
    />,
    <ForwardRef(StyledDialogFooterBase)>
      <CustomizedPrimaryButton
        data-automation-id="single-export-to-html-button"
        download="THE REPORT FILE NAME"
        href="html file url"
        onClick={[Function]}
      >
        Export
      </CustomizedPrimaryButton>
    </ForwardRef(StyledDialogFooterBase)>,
  ],
  "dialogContentProps": {
    "subText": "Optional: please describe the result (it will be saved in the report).",
    "title": "Provide result description",
    "type": 0,
  },
  "hidden": false,
  "modalProps": {
    "containerClassName": "exportDialog",
    "isBlocking": false,
    "onDismissed": [Function],
  },
  "onDismiss": [Function],
}
`;

exports[`ExportDialog renders without export dropdown due to lack of service 1`] = `
<DocumentFragment>
  <mock-styledwithresponsivemode
    dialogcontentprops="[object Object]"
    hidden="false"
    modalprops="[object Object]"
  >
    <mock-styledtextfieldbase
      arialabel="Provide result description"
      multiline="true"
      resizable="false"
      rows="8"
      value="description"
    />
    <mock-styleddialogfooterbase>
      <mock-customizedprimarybutton
        data-automation-id="single-export-to-html-button"
        download="THE REPORT FILE NAME"
        href="html file url"
      >
        Export
      </mock-customizedprimarybutton>
    </mock-styleddialogfooterbase>
  </mock-styledwithresponsivemode>
</DocumentFragment>
`;
